SalesforceGarage/src/objects/QBO_Tax_Rate__c.object
<CustomObject>
    <fields>
        <fullName>QBO_Rate_Value__c</fullName>
        <label>Rate Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QBO_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>QBO_Tax_Code__c</referenceTo>
        <relationshipLabel>Tax Rate</relationshipLabel>
        <relationshipName>Tax_Rate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QBO_Tax_Rate_Ref__c</fullName>
        <label>Tax Rate Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tax Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>